# PNM-OOPStructure

./: .gitconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_commands.txt  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
data/: base.json  image.json  imported.json  non_newtonianStokes.json  non_newtonianStokes_berea.json  tomographic.json
data/Berea_tomographic/: Image.mhd
data/rock_samples/Berea/: Summary Results Berea.txt
patches/: drainage_issue_fixed.patch  invasion_percolation_issue_fixed.patch  phase_names_issue_fixed.patch
src/: image.py  main.py  stokes.py
src/core/: algorithm.py  network.py  phases.py  postprocessing.py
src/core/algorithms/: __init__.py  algorithm_manager.py  base_algorithm.py  drainage_algorithm.py  stokes_algorithm.py
src/core/postprocessing/: __init__.py  base_postprocessor.py  drainage_postprocessor.py  postprocessing_manager.py  stokes_postprocessor.py
src/demo/: network_topology.py
src/examples/: cubic_nertwork_dr_3D.py  cubic_network.py  cubic_network_dr_2D.py  cubic_network_dr_2D_old.py  cubic_network_dr_CO2WaterStokes.py  cubic_network_ip.py  cubic_network_ip_2D.py  cubic_network_ip_CO2WaterStokes_3D.py  cubic_network_single_phase_3D.py  data_network_dr_CO2WaterStokes.py  porespy_2D_from_image.py
src/utils/: config_parser.py  pnextract
src/utils/figures/: media_utils.py
src/utils/plots/: layout.py  plotter.py
