[project]
name = "pnm-oopstructure"
version = "0.0.0"
description = "PNM-OOPStructure"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "asttokens==3.0.0",
    "attrs==24.2.0",
    "chemicals==1.3.1",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.9",
    "decorator==5.1.1",
    "docrep==0.3.2",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fluids==1.0.27",
    "fonttools==4.55.1",
    "h5py==3.12.1",
    "imageio==2.36.1",
    "intel-cmplr-lib-ur==2025.0.3",
    "intel-openmp==2025.0.3",
    "ipykernel==6.29.5",
    "ipython==8.30.0",
    "jedi==0.19.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.7",
    "lazy-loader==0.4",
    "llvmlite==0.43.0",
    "markdown-it-py==3.0.0",
    "matplotlib==3.9.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mkl==2025.0.1",
    "moviepy==2.2.1",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numba==0.60.0",
    "numpy==1.26.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.48",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyamg==5.2.1",
    "pygments==2.18.0",
    "pypardiso==0.4.6",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "rich==13.9.4",
    "rpds-py==0.22.1",
    "scikit-image==0.24.0",
    "scipy==1.12.0",
    "six==1.16.0",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tbb==2022.0.0",
    "tcmlib==1.2.0",
    "thermo==0.4.0",
    "tifffile==2024.9.20",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transforms3d==0.4.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "umf==0.9.1",
    "wcwidth==0.2.13",
]
