[project]
name = "pnm-oopstructure"
version = "0.0.0"
description = "PNM-OOPStructure"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib==3.9.3",
    "moviepy==2.2.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "rich==13.9.4",
    "scikit-image==0.24.0",
]
